# dip_ws

./: .gitignore  README.md
src/decision/: CMakeLists.txt  package.xml
src/decision/include/decision/: decision.hpp
src/decision/src/: decision.cpp  main.cpp  process.cpp  s1_process.cpp
src/detect/: CMakeLists.txt  package.xml
src/detect/config/: detection.yaml
src/detect/launch/: detect.launch
src/detect/src/: detect_template.cpp
src/dip_bring_up/: CMakeLists.txt  package.xml
src/dip_bring_up/config/: pill_detect.yaml
src/dip_bring_up/launch/: real.launch  slam.launch  with_rosbag.launch  with_rviz.launch
src/dip_bring_up/rviz/: ground_detector.rviz
src/ground_detector/: CMakeLists.txt  package.xml
src/ground_detector/config/: camera_info.yaml  perspective.yaml
src/ground_detector/include/ground_detector/: perspective_trans.hpp  red_extract.hpp  road_extract.hpp
src/ground_detector/scripts/: odom_frame_trans.py
src/ground_detector/src/: main.cpp  perspective_trans.cpp  red_extract.cpp  road_extract.cpp
src/map_registration/: CMakeLists.txt  README.md  package.xml
src/map_registration/include/map_registration/: global_map.hpp  registration.hpp
src/map_registration/src/: global_map.cpp  main.cpp  registration.cpp
src/pill_detect/: CMakeLists.txt  package.xml
src/pill_detect/include/pill_detect/: match.hpp  pill_detect.hpp
src/pill_detect/launch/: detect.launch
src/pill_detect/src/: main.cpp  match.cpp  pill_detect.cpp
